--- a/src/views/app.hbs
+++ b/src/views/app.hbs
@@ -7,5 +7,5 @@
 <body>
 <div id="main">{{{mainPlaceholder}}}</div>
 </body>
-<script src="app.min.js"></script>
+<script src="bundle.js"></script>
 </html>
