--- a/src/views/hello-world.hbs
+++ b/src/views/hello-world.hbs
@@ -5,7 +5,8 @@
     <title>Content Security Policy Play</title>
 </head>
 <body>
-<a href="/nuclear">nuclear</a>
-<a href="/evil">evil</a>
+<a href="/">home</a>
+<div id="main">{{{mainPlaceholder}}}</div>
 </body>
+<script src="bundle.js"></script>
 </html>
