Add script allowed scenario

--- a/src/views/app.hbs
+++ b/src/views/app.hbs
@@ -5,7 +5,16 @@
     <title>Content Security Policy Play</title>
 </head>
 <body>
-<a href="/nuclear">nuclear</a>
-<a href="/evil">evil</a>
+<ul>
+    <li>
+        <a href="/nuclear">nuclear</a>
+    </li>
+    <li>
+        <a href="/evil">evil</a>
+    </li>
+    <li>
+        <a href="/read-the-script">read the script</a>
+    </li>
+</ul>
 </body>
 </html>
