Add hash example

--- a/src/views/app.hbs
+++ b/src/views/app.hbs
@@ -15,6 +15,9 @@
     <li>
         <a href="/read-the-script">read the script</a>
     </li>
+    <li>
+        <a href="/hashtag-just-sayin">#justsayin</a>
+    </li>
 </ul>
 </body>
 </html>
