Add nonce example

--- a/src/views/app.hbs
+++ b/src/views/app.hbs
@@ -18,6 +18,9 @@
     <li>
         <a href="/hashtag-just-sayin">#justsayin</a>
     </li>
+    <li>
+        <a href="/crypto-once">crypto once</a>
+    </li>
 </ul>
 </body>
 </html>
