--- a/src/views/hello-world.hbs
+++ b/src/views/hello-world.hbs
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Content Security Policy Play</title>
+    <style nonce="Nc3n83cnSAd3wc3Sasdfn939hc3">
+        div {
+            color: green;
+        }
+    </style>
 </head>
 <body>
 <a href="/">home</a>
